Bg image for big screens

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -37,6 +37,14 @@ h6 {
     color: #f8f8f8;
     background: url(../img/intro-bg.jpg) no-repeat center center;
     background-size: cover;
+
+    position: relative;
+    width: 100%;
+    min-height: auto;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 
 .intro-message {
